==> miketeachman/micropython/ports/esp32/machine_i2s.c <==
#include <string.h>
#include "py/obj.h"
#include "py/runtime.h"
#include "modmachine.h"
#include "mphalport.h"
#include "driver/i2s.h"

STATIC void machine_i2s_init_helper(machine_i2s_obj_t *self, size_t n_pos_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {

    enum {
        ARG_bck,
        ARG_ws,
        ARG_sdout,
        ARG_sdin,
        ARG_standard,
        ARG_mode,
        ARG_dataformat,
        ARG_channelformat,
        ARG_samplerate,
        ARG_dmacount,
        ARG_dmalen,
        ARG_apllrate,
    };

    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_bck,              MP_ARG_KW_ONLY | MP_ARG_REQUIRED | MP_ARG_OBJ,   {.u_obj = MP_OBJ_NULL} },
        { MP_QSTR_ws,               MP_ARG_KW_ONLY | MP_ARG_REQUIRED | MP_ARG_OBJ,   {.u_obj = MP_OBJ_NULL} },
        { MP_QSTR_sdout,            MP_ARG_KW_ONLY                   | MP_ARG_OBJ,   {.u_obj = MP_OBJ_NULL} },
        { MP_QSTR_sdin,             MP_ARG_KW_ONLY                   | MP_ARG_OBJ,   {.u_obj = MP_OBJ_NULL} },
        { MP_QSTR_standard,         MP_ARG_KW_ONLY                   | MP_ARG_INT,   {.u_int = I2S_COMM_FORMAT_I2S} },
        { MP_QSTR_mode,             MP_ARG_KW_ONLY | MP_ARG_REQUIRED | MP_ARG_INT,   {.u_int = -1} },
        { MP_QSTR_dataformat,       MP_ARG_KW_ONLY | MP_ARG_REQUIRED | MP_ARG_INT,   {.u_int = -1} },
        { MP_QSTR_channelformat,    MP_ARG_KW_ONLY | MP_ARG_REQUIRED | MP_ARG_INT,   {.u_int = -1} },
        { MP_QSTR_samplerate,       MP_ARG_KW_ONLY | MP_ARG_REQUIRED | MP_ARG_INT,   {.u_int = -1} },
        { MP_QSTR_dmacount,         MP_ARG_KW_ONLY                   | MP_ARG_INT,   {.u_int = 16} },
        { MP_QSTR_dmalen,           MP_ARG_KW_ONLY                   | MP_ARG_INT,   {.u_int = 64} },
        { MP_QSTR_apllrate,         MP_ARG_KW_ONLY                   | MP_ARG_INT,   {.u_int = 0} },
    };

    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_pos_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);
    
    //
    // ---- Check validity of arguments ----
    //

    // are I2S pin assignments valid?
    int8_t bck = args[ARG_bck].u_obj == MP_OBJ_NULL ? -1 : machine_pin_get_id(args[ARG_bck].u_obj);
    int8_t ws = args[ARG_ws].u_obj == MP_OBJ_NULL ? -1 : machine_pin_get_id(args[ARG_ws].u_obj);
    int8_t sdin = args[ARG_sdin].u_obj == MP_OBJ_NULL ? -1 : machine_pin_get_id(args[ARG_sdin].u_obj);
    int8_t sdout = args[ARG_sdout].u_obj == MP_OBJ_NULL ? -1 : machine_pin_get_id(args[ARG_sdout].u_obj);

    if ((sdin == -1) && (args[ARG_mode].u_int == (I2S_MODE_MASTER | I2S_MODE_RX))) {
        mp_raise_ValueError("sdin must be specified for RX mode");
    }

    if ((sdout == -1) && (args[ARG_mode].u_int == (I2S_MODE_MASTER | I2S_MODE_TX))) {
        mp_raise_ValueError("sdout must be specified for TX mode");
    }

    if ((sdin != -1) && (sdout != -1)) {
        mp_raise_ValueError("only one of sdin or sdout can be specified");
    }

    // is Standard valid?
    i2s_comm_format_t i2s_commformat = args[ARG_standard].u_int;
    if ((i2s_commformat != I2S_COMM_FORMAT_I2S) &&
        (i2s_commformat != (I2S_COMM_FORMAT_I2S | I2S_COMM_FORMAT_I2S_LSB))) {
        mp_raise_ValueError("Standard is not valid");
    }

    // is Mode valid?
    i2s_mode_t i2s_mode = args[ARG_mode].u_int;
    if ((i2s_mode != (I2S_MODE_MASTER | I2S_MODE_RX)) &&
        (i2s_mode != (I2S_MODE_MASTER | I2S_MODE_TX))) {
        mp_raise_ValueError("Only Master Rx or Master Tx Modes are supported");
    }

    // is Data Format valid?
    i2s_bits_per_sample_t i2s_bits_per_sample = args[ARG_dataformat].u_int;
    if ((i2s_bits_per_sample != I2S_BITS_PER_SAMPLE_16BIT) &&
        (i2s_bits_per_sample != I2S_BITS_PER_SAMPLE_24BIT) &&
        (i2s_bits_per_sample != I2S_BITS_PER_SAMPLE_32BIT)) {
        mp_raise_ValueError("Data Format is not valid");
    }

    // is Channel Format valid?
    i2s_channel_fmt_t i2s_channelformat = args[ARG_channelformat].u_int;
    if ((i2s_channelformat != I2S_CHANNEL_FMT_RIGHT_LEFT) &&
        (i2s_channelformat != I2S_CHANNEL_FMT_ALL_RIGHT) &&
        (i2s_channelformat != I2S_CHANNEL_FMT_ALL_LEFT) &&
        (i2s_channelformat != I2S_CHANNEL_FMT_ONLY_RIGHT) &&
        (i2s_channelformat != I2S_CHANNEL_FMT_ONLY_LEFT)) {
        mp_raise_ValueError("Channel Format is not valid");
    }

    // is Sample Rate valid?
    // No validation done:  ESP-IDF API does not indicate a valid range for sample rate

    // is DMA Buffer Count valid?
    // ESP-IDF API code checks for buffer count in this range:  [2, 128]
    int16_t i2s_dmacount = args[ARG_dmacount].u_int;
    if ((i2s_dmacount < 2) || (i2s_dmacount > 128)) {
        mp_raise_ValueError("DMA Buffer Count is not valid.  Allowed range is [2, 128]");
    }

    // is DMA Buffer Length valid?
    // ESP-IDF API code checks for buffer length in this range:  [8, 1024]
    int16_t i2s_dmalen = args[ARG_dmalen].u_int;
    if ((i2s_dmalen < 8) || (i2s_dmalen > 1024)) {
        mp_raise_ValueError("DMA Buffer Length is not valid.  Allowed range is [8, 1024]");
    }

    // is APLL Rate valid?
    // No validation done:  ESP-IDF API does not indicate a valid range for APLL rate
    
    self->bck = bck;
    self->ws = ws;
    self->sdout = sdout;
    self->sdin = sdin;
    self->standard = args[ARG_standard].u_int;
    self->mode = args[ARG_mode].u_int;
    self->dataformat = args[ARG_dataformat].u_int;
    self->channelformat = args[ARG_channelformat].u_int;
    self->samplerate = args[ARG_samplerate].u_int;
    self->dmacount = args[ARG_dmacount].u_int;
    self->dmalen = args[ARG_dmalen].u_int;
    self->apllrate = args[ARG_apllrate].u_int;

    i2s_config_t i2s_config;
    i2s_config.communication_format = self->standard;
    i2s_config.mode = self->mode;
    i2s_config.bits_per_sample = self->dataformat;
    i2s_config.channel_format = self->channelformat;
    i2s_config.sample_rate = self->samplerate;
    i2s_config.intr_alloc_flags = ESP_INTR_FLAG_LOWMED; // allows simultaneous use of both I2S channels
    i2s_config.dma_buf_count = self->dmacount;
    i2s_config.dma_buf_len = self->dmalen;
    if (self->apllrate != 0) {
        i2s_config.use_apll = true;
    } else {
        i2s_config.use_apll = false;
    }
    i2s_config.fixed_mclk = self->apllrate;

    // uninstall I2S driver when changes are being made to an active I2S peripheral
    if (self->used) {
        i2s_driver_uninstall(self->id);
    }

    esp_err_t ret = i2s_driver_install(self->id, &i2s_config, 0, NULL);
    switch (ret) {
        case ESP_OK:
            break;
        case ESP_ERR_INVALID_ARG:
            mp_raise_msg(&mp_type_OSError, "I2S driver install:  Parameter error");
            break;
        case ESP_ERR_NO_MEM:
            mp_raise_msg(&mp_type_OSError, "I2S driver install:  Out of memory");
            break;
        default:
            // this error not documented in ESP-IDF
            mp_raise_msg(&mp_type_OSError, "I2S driver install:  Undocumented error"); 
            break;
    }

    i2s_pin_config_t pin_config;
    pin_config.bck_io_num = self->bck;
    pin_config.ws_io_num = self->ws;
    pin_config.data_out_num = self->sdout;
    pin_config.data_in_num = self->sdin;

    ret = i2s_set_pin(self->id, &pin_config);
    switch (ret) {
        case ESP_OK:
            break;
        case ESP_ERR_INVALID_ARG:
            mp_raise_msg(&mp_type_OSError, "I2S set pin:  Parameter error");
            break;
        case ESP_FAIL:
            mp_raise_msg(&mp_type_OSError, "I2S set pin:  IO error");
            break;
        default:
            // this error not documented in ESP-IDF
            mp_raise_msg(&mp_type_OSError, "I2S set pin:  Undocumented error"); 
            break;
    }

    self->used = true;
}

STATIC mp_obj_t machine_i2s_make_new(const mp_obj_type_t *type, size_t n_pos_args, size_t n_kw_args, const mp_obj_t *args) {
    mp_arg_check_num(n_pos_args, n_kw_args, 1, MP_OBJ_FUN_ARGS_MAX, true);

    machine_i2s_obj_t *self;

    // note: it is safe to assume that the arg pointer below references a positional argument because the arg check above
    //       guarantees that at least one positional argument has been provided
    i2s_port_t i2s_id = mp_obj_get_int(args[0]);
    if (i2s_id == I2S_NUM_0) {
        self = &machine_i2s_obj[0];
    } else if (i2s_id == I2S_NUM_1) {
        self = &machine_i2s_obj[1];
    } else {
        mp_raise_ValueError("I2S ID is not valid");
    }

    self->base.type = &machine_i2s_type;
    self->id = i2s_id;

    // is I2S peripheral already in use?
    if (self->used) {
        mp_raise_ValueError("I2S port is already in use");
    }

    mp_map_t kw_args;
    mp_map_init_fixed_table(&kw_args, n_kw_args, args + n_pos_args);
    // note:  "args + 1" below has the effect of skipping over the ID argument
    machine_i2s_init_helper(self, n_pos_args - 1, args + 1, &kw_args);

    return MP_OBJ_FROM_PTR(self);
}
